--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
+anyio==3.6.1
+beautifulsoup4==4.11.1
 black==22.10.0
+bs4==0.0.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 flake8==5.0.4
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
+idna==3.4
 mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.10.1
 platformdirs==2.5.2
 pycodestyle==2.9.1
 pyflakes==2.5.0
+requests==2.28.1
+rfc3986==1.5.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
 tomli==2.0.1
 typing-extensions==4.4.0
+urllib3==1.26.12
